[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
name = "libbv8"
crate-type = ["cdylib", "lib"]

[dependencies]
byond = "0.4.0"
ipc-channel = "0.15.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
shared = { path = "../shared" }
auxtools = { git = "https://github.com/igorsaux/auxtools", branch = "bv8" }
