[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.108.0"
ipc-channel = "0.15.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
shared = { path = "../shared" }
