[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
deno_core = ">=0.109.0"
ipc-channel = "0.15.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
serde_v8 = ">=0.20.0"
shared = { path = "../shared" }
tokio = { version = "1.14.0", features = ["full"] }

[build-dependencies]
deno_core = ">=0.109.0"
